# naiad_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: RobotTask.action
docs/: Algorithm.md  Motion.md  Peripheral.md  Sensor.md  System.md
msg/: AdminStatus.msg  AutoTaskFeedbackOutput.msg  ControlFeedbackOutput.msg  DepthData.msg  DepthDataOutput.msg  DeviceBrief.msg  DeviceId.msg  DeviceInfo.msg  EncoderState.msg  FogData.msg  FogState.msg  FogboxState.msg  INSDataOutput.msg  INSStatusOutput.msg  IsBottomOrSide.msg  LedLightState.msg  LifterState.msg  MainControllerInfo.msg  MainControllerState.msg  MotionControl.msg  MotionControlOutput.msg  MotionData.msg  MotionOdometer.msg  MotorInfo.msg  MotorState.msg  NetworkPlcState.msg  NetworkState.msg  NetworkStatistics.msg  PowerBoxState.msg  PowerboxState.msg  ProcessState.msg  PumpBoxState.msg  PumpboxState.msg  PushBoxState.msg  PushboxState.msg  RemoteControlOutput.msg  RobotInfo.msg  RobotPoseOutput.msg  RobotStatusOutput.msg  SystemState.msg
srv/: AutoTaskType.srv  CoordTransfer.srv  DeviceGetInfo.srv  FogCalibration.srv  InertiaSource.srv  LedlightSetBrightness.srv  LifterSetPosition.srv  MainControllerGetInfo.srv  MainControllerSetTime.srv  MarkRobotPosition.srv  PushboxControl.srv  PushboxGetOfflineConfig.srv  PushboxSetOfflineConfig.srv
